refactor: 문자열, 숫자 하드 코딩 값 리팩토링